refactor: rename project from NeuroThrive to DivergentThrive
- Update app name in manifest.json (DivergentThrive Daily)
- Update service worker cache name (divergentthrive-v2.0)
- Update all UI references in index.html
- Update deep link scheme to divergentthrive://safehaven/unlock
- Update Play Store package ID to app.divergentthrive.safehaven.plus
- Update localStorage key to divergentthrive_advanced_unlocked
- Update notification title to DivergentThrive Daily

BREAKING CHANGE: Deep link URL changed from neurothrive:// to divergentthrive://
This requires Android app to be updated simultaneously with matching deep link intent filter.

Reason: NeuroThrive is a trademarked name. DivergentThrive is verified clear.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "NeuroThrive Daily",
-  "short_name": "NeuroThrive",
+  "name": "DivergentThrive Daily",
+  "short_name": "DivergentThrive",
   "description": "Your neurodivergent support companion - track moods, manage routines, counter imposter syndrome, and thrive daily",
   "start_url": "./index.html",
   "scope": "./",
